# consync

./: Cargo.toml  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: build-and-release.yml
lib/: create-systemd-service.sh
scripts/: create-systemd-service.sh  install.sh  uninstall.sh
src/: cli.rs  config.rs  filters.rs  main.rs  read_config.rs  read_dir.rs  watcher.rs
src/callbacks/: chezmoi.rs  executor.rs  mod.rs
src/cli/: args.rs  check.rs  mod.rs  usage.rs
