[package]
name = "consync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.5.0"
dirs = "5.0"
futures = "0.3.28"

notify = { version = "6.0.1", default-features = false, features = ["macos_kqueue"] }
